16 & 32-bit Target Timestamp support improved

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -256,7 +256,8 @@
                     "${workspaceFolder}/til.json",
                      "-p",
                      "com6",
-                     "-debug"
+                     "-baud",
+                     "921600"
             ]
         },        
         {
