--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -28,8 +28,8 @@ jobs:
     - name: Check
       run: go vet -v ./...
 
-    # - name: Test
-    #   run: go test ./internal/...
+    - name: Test
+      run: go test ./...
 
     - name: Build
       run: go build -v ./...
