--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -25,11 +25,12 @@ jobs:
       with:
         go-version: 1.16.x
 
-    - name: Check
-      run: go vet -v ./...
+    # Disabled due to https://github.com/golang/go/issues/41205#issuecomment-692862157
+    # - name: Check
+    #   run: go vet -v ./...
 
     - name: Test
-      run: go test ./...
+      run: go test -v ./...
 
     - name: Build
       run: go build -v ./...
