--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,8 @@
         "trice.h": "c",
         "triceconfig.h": "c",
         "tcobs.h": "c",
-        "trice_test.h": "c"
+        "trice_test.h": "c",
+        "triceCheckTestpattern.C": "cpp"
     },
     "cSpell.words": [
         "CFLAGS",
