--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -158,18 +158,17 @@
             "env": {},
             "args": ["log",
                      "-idlist",
-                     "${workspaceFolder}/til.json",
+                     "${workspaceFolder}/tiln.json",
                      "-port",
                      "JLINK",
                      "-args",
                      "-device STM32G0B1KE -if SWD -speed 4000 -RTTChannel 0",
-                     "-encoding",
-                     "tle",
+                     "-tsf",
+                     "us",
                      "-prefix",
                      "off",
                      "-li",
-                     "off",
-                     "-v"
+                     "off"
             ]
         },
         {
