TRICE modbus buffer parallel option

--- a/test/MDK-ARM_STM32F030R8/MDK-ARM/MDK-ARM_STM32F030R8.uvprojx
+++ b/test/MDK-ARM_STM32F030R8/MDK-ARM/MDK-ARM_STM32F030R8.uvprojx
@@ -539,6 +539,11 @@
               <FileType>5</FileType>
               <FilePath>..\..\..\src\xtea.h</FilePath>
             </File>
+            <File>
+              <FileName>triceModbusBuffer.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\src\triceModbusBuffer.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
