--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,8 @@
         "triceconfig.h": "c",
         "tcobs.h": "c",
         "trice_test.h": "c",
-        "triceCheckTestpattern.C": "cpp"
+        "triceCheckTestpattern.C": "cpp",
+        "cobs.h": "c"
     },
     "cSpell.words": [
         "CFLAGS",
